@@ -25,7 +25,7 @@
  * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  *
- * $Id: amavisd-milter.h,v 1.6 2006/01/25 21:10:26 reho Exp $
+ * $Id: amavisd-milter.h,v 1.7 2006/04/15 23:22:53 reho Exp $
  */
 
 #ifndef _AMAVISD_MILTER_H
@@ -36,6 +36,7 @@
 /* Maximum message buffers length */
 #define MAXLOGBUF	1024	/* syslog message buffer */
 #define MAXAMABUF	65536	/* amavisd communication buffer */
+#define AMABUFCHUNK	2048	/* amavisd buffer reallocation step */
 
 struct mlfiCtx;
 
@@ -57,6 +58,8 @@ struct mlfiCtx {
     char	mlfi_fname[MAXPATHLEN]; /* mail file name */
     FILE       *mlfi_fp;		/* mail file handler */
     int		mlfi_max_sem_locked;	/* connections semaphore locked */
+    char       *mlfi_amabuf;		/* amavisd communication buffer */
+    size_t	mlfi_amabuf_length;	/* amavisd buffer length */
 };
 
 /* Get private data from libmilter */
@@ -94,8 +97,8 @@ extern char    *work_dir;		/* work ditectory name */
 /* Amavisd communication */
 extern int	amavisd_init(void);
 extern int	amavisd_connect(struct sockaddr_un *);
-extern int	amavisd_request(int, char *, char *);
-extern int	amavisd_response(int, char *, size_t);
+extern int	amavisd_request(struct mlfiCtx *mlfi, int, char *, char *);
+extern int	amavisd_response(struct mlfiCtx *mlfi, int);
 extern int	amavisd_close(int);
 
 /* Log message */
