@@ -25,12 +25,51 @@
  * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  *
- * $Id: amavisd.c,v 1.3 2006/01/09 21:46:35 reho Exp $
+ * $Id: amavisd.c,v 1.4 2006/01/25 21:53:27 reho Exp $
  */
 
 #include "amavisd-milter.h"
 
 #include <ctype.h>
+
+
+/*
+** LOGQIDMSG - Log message with mail queue id
+*/
+#define LOGQIDMSG(priority, format, args...) \
+{ \
+    if (mlfi != NULL && mlfi->mlfi_qid != '\0') { \
+	logmsg(priority, "%s: " format, mlfi->mlfi_qid , ## args); \
+    } else { \
+	logmsg(priority, "NOQUEUE: " format , ## args); \
+    } \
+}
+
+
+/*
+** AMAVISD_GROW_AMABUF - Reallocate amavisd communication buffer
+*/
+static size_t
+amavisd_grow_amabuf(struct mlfiCtx *mlfi)
+{
+    char       *newamabuf;
+    size_t	newamabuf_length = mlfi->mlfi_amabuf_length + AMABUFCHUNK;
+
+    LOGQIDMSG(LOG_DEBUG, "amavisd communication buffer was increased to %lu",
+	(unsigned long)newamabuf_length);
+
+    if (newamabuf_length > MAXAMABUF) {
+	errno = EOVERFLOW;
+	return -1;
+    }
+    if ((newamabuf = realloc(mlfi->mlfi_amabuf, newamabuf_length)) == NULL) {
+	return -1;
+    }
+    mlfi->mlfi_amabuf = newamabuf;
+    mlfi->mlfi_amabuf_length = newamabuf_length;
+
+    return newamabuf_length;
+}
 
 
 /*
@@ -75,18 +114,18 @@ amavisd_connect(struct sockaddr_un *sock)
 ** AMAVISD_REQUEST - Write request line to amavisd
 */
 int
-amavisd_request(int sd, char *name, char *value)
+amavisd_request(struct mlfiCtx *mlfi, int sd, char *name, char *value)
 {
-    char       *b, *p;
-    char	buf[MAXAMABUF];
+    char       *p;
+    char       *b = mlfi->mlfi_amabuf;
 
     /* Encode request */
-    b = buf;
     if (name != NULL) {
 	p = name;
 	while (*p != '\0') {
-	    if (b >= buf + sizeof(buf) - 8) {
-		errno = EOVERFLOW;
+	    if (b >= mlfi->mlfi_amabuf + mlfi->mlfi_amabuf_length - 5 &&
+		amavisd_grow_amabuf(mlfi) == -1)
+	    {
 		return -1;
 	    }
 	    if (isalnum(*p) || *p == '-' || *p == '_') {
@@ -96,13 +135,16 @@ amavisd_request(int sd, char *name, char *value)
 		b += 3;
 	    }
 	}
-	*b++ = '=';
+	if (value != NULL) {
+	    *b++ = '=';
+	}
     }
-    if (name != NULL && value != NULL) {
+    if (value != NULL) {
 	p = value;
-	while (*p != '\0' && b < buf + sizeof(buf)) {
-	    if (b >= buf + sizeof(buf) - 4) {
-		errno = EOVERFLOW;
+	while (*p != '\0') {
+	    if (b >= mlfi->mlfi_amabuf + mlfi->mlfi_amabuf_length - 4 &&
+		amavisd_grow_amabuf(mlfi) == -1)
+	    {
 		return -1;
 	    }
 	    if (isalnum(*p) || *p == '-' || *p == '_') {
@@ -116,7 +158,8 @@ amavisd_request(int sd, char *name, char *value)
     *b++ = '\n';
 
     /* Write request to amavisd socket */
-    return write_sock(sd, buf, b - buf, amavisd_timeout);
+    return write_sock(sd, mlfi->mlfi_amabuf, b - mlfi->mlfi_amabuf,
+	amavisd_timeout);
 }
 
 
@@ -124,51 +167,52 @@ amavisd_request(int sd, char *name, char *value)
 ** AMAVISD_RESPONSE - Read response line from amavisd
 */
 int
-amavisd_response(int sd, char *line, size_t maxlen)
+amavisd_response(struct mlfiCtx *mlfi, int sd)
 {
     int		decode = 0;
-    char       *p = line;
+    char       *b = mlfi->mlfi_amabuf;
 
     /* Read response line */
-    while (read_sock(sd, p, 1, amavisd_timeout) > 0) {
-	if (p >= line + maxlen - 2) {
-	    *(p + 1) = '\0';
-	    errno = EOVERFLOW;
+    while (read_sock(sd, b, 1, amavisd_timeout) > 0) {
+	if (b >= mlfi->mlfi_amabuf + mlfi->mlfi_amabuf_length - 2 &&
+	    amavisd_grow_amabuf(mlfi) == -1)
+	{
+	    *(b + 1) = '\0';
 	    return -1;
 	}
-	if (*p == '\n') {
-	    *p = '\0';
+	if (*b == '\n') {
+	    *b = '\0';
 	    return 0;
-	} else if (*p == '%') {
+	} else if (*b == '%') {
 	    decode = 1;
 	} else if (decode == 1) {
-	    if (isxdigit(*p)) {
+	    if (isxdigit(*b)) {
 		decode = 2;
-		p++;
+		b++;
 	    } else {
-		*(p + 1) = '\0';
+		*(b + 1) = '\0';
 		errno = EILSEQ;
 		return -1;
 	    }
 	} else if (decode == 2) {
-	    if (isxdigit(*p)) {
-		*(p + 1) = '\0';
-		*(p - 1) = (u_char) strtol(p - 1, NULL, 16);
+	    if (isxdigit(*b)) {
+		*(b + 1) = '\0';
+		*(b - 1) = (u_char) strtol(b - 1, NULL, 16);
 		decode = 0;
 	    } else {
-		*(p + 1) = '\0';
+		*(b + 1) = '\0';
 		errno = EILSEQ;
 		return -1;
 	    }
-	} else if (*p == '\r') {
+	} else if (*b == '\r') {
 	    /* Do nothing */
 	} else {
-	    p++;
+	    b++;
 	}
     }
 
     /* read_sock failed */
-    *p = '\0';
+    *b = '\0';
     return -1;
 }
 
