@@ -1,5 +1,10 @@
 This is the CHANGELOG for amavisd-milter.
 
+20060616:
+	Amavis communication buffer is now dynamically allocated.
+	MAXAMABUF is maximum buffer length, AMABUFCHUNK is initial length
+	and reallocation step.  Buffer is allocated for every connection.
+
 20060414:
 	amavisd-milter-1.1.2
 
@@ -143,4 +148,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.28 2006/04/15 23:22:53 reho Exp $
+$Id: CHANGES,v 1.29 2006/04/15 23:51:59 reho Exp $
